# game.ai

./: .gitignore  README.md  comp_cython  game_ai  game_ai.c  import_sprite.py  offshoot.manifest.json  pyproject.toml  setup.py  setup.sh  tox.ini
clibs/: setup.py
clibs/context_classifier/: setup.py
clibs/context_classifier/libs/: cnn.c  cnn.pyx  utils.c  utils.pyx
clibs/context_classifier/models/context_classifier/: saved_model.pb
clibs/context_classifier/src/: main.c  main.pyx
clibs/utils/: import_sprite.c  import_sprite.pyx  setup.py
config/: config.plugins.yml
plugins/SerpentIndiJGameAgentPlugin/: plugin.py
plugins/SerpentIndiJGameAgentPlugin/clibs/: TronController.pyx
plugins/SerpentIndiJGameAgentPlugin/files/: serpent_IndiJ_game_agent.py
plugins/SerpentOzymandiasGameAgentPlugin/: plugin.py  setup.py
plugins/SerpentOzymandiasGameAgentPlugin/clibs/: TronController.c
plugins/SerpentOzymandiasGameAgentPlugin/files/: serpent_Ozymandias_game_agent.py
plugins/SerpentOzymandiasGameAgentPlugin/files/helpers/: main.c  main.pyx  setup.py
plugins/SerpentOzymandiasGameAgentPlugin/files/ml_models/: model.pyx  runner.pyx
plugins/SerpentTronGameAgentPlugin/: plugin.py  setup.py
plugins/SerpentTronGameAgentPlugin/clibs/: TronController.pyx
plugins/SerpentTronGameAgentPlugin/files/: serpent_Tron_game_agent.py
plugins/SerpentTronGamePlugin/: plugin.py
plugins/SerpentTronGamePlugin/files/: serpent_Tron_game.py
plugins/SerpentZeroADGamePlugin/: plugin.py  setup.py
plugins/SerpentZeroADGamePlugin/files/: serpent_ZeroAD_game.py
(+34 files in other folders)
