[tool.poetry]
name = "GameAI"
version = "0.1.0"
description = "Serpent Projects"
authors = ["Nicholas Shindler"]

[tool.poetry.dependencies]
python = "3.6"
cython = "0.26.1"
numpy = "*"
keras = "*"
tensorflow = "2.2"
tensorflow-cpu = "2.2"


[tool.poetry.dev-dependencies]
wheel = "*"
setuptools = "*"
serpentai = "*"
pytest = "*"
pytest-cov = "*"
pytest-benchmark = "*"
redis = "*"
tensorflow-estimator = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
